--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "push": "aws s3 sync ./assets s3://war-rig-borderlands"
+    "push": "aws s3 sync ./assets s3://war-rig-borderlands",
+    "cards": "node ./scripts/cards/buildCards.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/Ellotron/war-rig/issues"
   },
-  "homepage": "https://github.com/Ellotron/war-rig#readme"
+  "homepage": "https://github.com/Ellotron/war-rig#readme",
+  "devDependencies": {
+    "canvas": "^2.6.1",
+    "csvtojson": "^2.0.10"
+  }
 }
